# UltraSlowDE

./: .gitignore  README.md  SANITIZATION_NOTE.txt  concept.md  docker-compose.class.yml  pyproject.toml
docker/class/: Dockerfile
docs/: methods_results.md  perturbation_plan.md
output/: dr2_bao_extracted.json  fsig8_check_results.json  model_a_scipy_map.json  nested_results.json  production_checkpoint.json  wide_prior_a_results.json
scripts/: check_lcdm_lnl_discrepancy.py  check_lcdm_normalization.py  check_lnl_breakdown.py  check_mc_backends.py  check_params.py  consistent_lnl_comparison.py  convert_and_build_papers.py  find_model_a_scipy_map.py  print_table_values.py  run_nuts_lcdm.py  run_nuts_model_b.py  run_nuts_model_b_only.py  show_all_keys.py  show_lcdm_keys.py  show_mc_table.py  update_model_a_lnl.py  update_paper_nuts_b.py  validate_results.py
src/ultra_slow_de/: __init__.py  baseline_lcdm.py  builtin_data.py  compressed_prior_check.py  constants.py  data_sources.py  datasets.py  demo.py  demo_real_data.py  evidence_contract.py  figures.py  fsig8_check.py  growth_backend.py  inference.py  ingest.py  likelihood.py  model_a.py  model_b.py  (+10 more)
src/ultra_slow_de.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_baseline_lcdm.py  test_compressed_prior_check.py  test_data_sources.py  test_evidence_contract.py  test_growth_backend.py  test_likelihood.py  test_model_a.py  test_model_b.py  test_observables.py  test_real_data_pipeline.py  test_residuals.py  test_sampler.py  test_sampler_backend.py  test_sampler_nuts.py
