[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-slow-de"
version = "0.1.0"
description = "Minimal cosmology modelling toolkit for ultra-slow dark-energy hypothesis testing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
jax = [
  "jax>=0.4.31",
  "jaxlib>=0.4.31",
]
numpyro = [
  "numpyro>=0.15",
]
blackjax = [
  "blackjax>=1.2",
]
mcmc-gpu = [
  "jax>=0.4.31",
  "jaxlib>=0.4.31",
  "numpyro>=0.15",
  "blackjax>=1.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]